# safety-circuits

./: .gitignore  FINDINGS.md  Makefile  PROJECT_PLAN.md  README.md  RESEARCH_PLAN.md  pyproject.toml
Kaggle_Logs/: download.txt
Kaggle_Logs/Gemma3-1b/: download.txt
Kaggle_Logs/Llama3-3b/: download (1).txt  download (2).txt  download.txt
Kaggle_Logs/Phi3/: download (1).txt  download (2).txt  download (3).txt  download.txt
Kaggle_Logs/Qwen2.5-1.5B-Instruct/: download (1).txt  download (2).txt  download (3).txt  download (4).txt  download (5).txt  download (6).txt  download.txt
Kaggle_Logs/Qwen3-1.7B/: download.txt
Kaggle_Logs/SmolLM2-1.7B-Instruct/: download (1).txt  download.txt
configs/: default.yaml
docker/: Dockerfile
kaggle/: kernel-metadata.json  make_kernel_notebook.py  run_edit_experiment.py  run_editing_all.ipynb  run_experiment.py
notebooks/: 01_setup_and_smoke_test.ipynb  02_data_pipeline.ipynb  03_refusal_signal.ipynb  04_activation_patching.ipynb  05_ablation_study.ipynb  06_metric_audit.ipynb  _make_notebooks.py  colab_bootstrap.py
paper/: paper.md
paper/figures/: summary_table.csv
results/: README.md
scripts/: README_lightning.md  kaggle_api.py  kaggle_push.sh  kaggle_setup_creds.sh  kaggle_watch.py  make_figures.py  run_editing.sh
slides/: README.md  beamerinnerthemeUniBonn.sty  beamerthemeUniBonn.sty  main.tex  talking_points.md
src/safety_circuits/: __init__.py  (+17 more)
tests/: test_analysis.py  test_audit.py  test_editing.py  test_imports.py  test_lora.py  test_pairing.py  test_refusal_regex.py  test_steering.py  test_toxicity.py
(+248 files in other folders)
