[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-circuits"
version = "0.1.0"
description = "Mechanistic interpretability of refusal in small instruct LMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pranav Yadav" }]
license = { text = "MIT" }

dependencies = [
    "torch>=2.2",
    "transformer-lens>=2.0.0",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "datasets>=2.18",
    "accelerate>=0.27",
    "einops>=0.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "jaxtyping>=0.2",
    "plotly>=5.18",
    "peft>=0.10",  # §9 weight-editing extension (LoRA). The head-masked adapter is custom
                   # (PEFT can't restrict below a whole projection); peft is kept for its merge
                   # utilities / optional layer-restricted comparison and HF+PEFT framing.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "ruff>=0.3",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
safety-circuits = "safety_circuits.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
